# Tiagonew

./: .gitignore  Dockerfile  README.md  READMe.md  navigation.launch  start_docker.sh
perception_module/: cv_utils.py  human_tracker.py  models.py  object_manager.py  perception.py  segmentator.py  utils.py
tiago_project/: CMakeLists.txt  ao  new_code.txt  package.xml  readme.md
tiago_project/launch/: manipulation_world.launch  mapping.launch  navigation.launch  tiago.launch
tiago_project/map/: submap_0.pgm
tiago_project/models/challenge_human/: model.config  model.sdf
tiago_project/models/challenge_human/mesh/: human_model.stl
tiago_project/models/challenge_pincers/: model.config  model.sdf
tiago_project/models/challenge_pincers/mesh/: challenge_pincers.stl
tiago_project/models/challenge_screwdriver/: model.config  model.sdf
tiago_project/models/challenge_screwdriver/mesh/: challenge_screwdriver.stl
tiago_project/models/challenge_table/: model.sdf
tiago_project/models/challenge_torch/: model.config  model.sdf
tiago_project/models/challenge_torch/mesh/: challenge_torch.stl
tiago_project/models/challenge_wrench/: model.config  model.sdf
tiago_project/msg/: CentroidArray.msg  FilteredObjectPercept.msg
tiago_project/rviz/: rviz_config.rviz
tiago_project/src/perception_module/: cv_utils.py  detections.txt  filter_utils.py  object_menager1.py  object_menager2.py  perception.py  persistent.py  utils.py
tiago_project/worlds/manipulation_world/: manipulation_world.world  world_new.world
